Changelog
=========


2.0.5 (Unreleased)
------------------

- Simplify CSS and JS registrations. CSS will now be imported using the
  standard link and so can be merged, inserted after forms.css.
  [elro]

- Enable the left-menu on the configlet, to be more consistent with all other configlets.
  Related to https://dev.plone.org/plone/ticket/11737
  [WouterVH]


2.0.4 (2011-05-28)
------------------

- Refactor/clean up the handleComment method.
  [timo]

- Make handleComment method store comment attributes from form extenders. This 
  allows us to extend the comment form with external add-ons. See
  http://packages.python.org/plone.app.discussion/howtos/howto_extend_the_comment_form.html
  for details.
  [timo]


2.0.3 (2011-06-19)
------------------

- Updated Simplified Chinese translation
  [jianaijun]

- Italian translation review.
  [gborelli]


2.0.2 (2011-05-12)
------------------

- Moderation should be enabled only if there is a workflow set for Discussion
  Item.
  [erico_andrei]


2.0.1 (2011-04-22)
------------------

- Translations updated. German translations for notifications added.
  [timo]

- Add links to delete/approve a comment in the moderator notification email.
  [timo]

- Remove the unnecessary workflow_action parameter from the PublishComments
  request.
  [timo]

- Make sure the email settings in the control panel are disabled when commenting
  is disabled globally.
  [timo]

- Enable/disable moderator_email setting dynamically as mail settings or
  discussion settings change.
  [timo]

- Remove ImportError exceptions for Plone < 4.1 code and plone.z3cform < 0.6.0.
  [timo]

- Provide the comment body text in the email notification.
  [timo]

- Fix comment link in email notification. This fixes
  http://dev.plone.org/plone/ticket/11413.
  [timo]

- Redirect to the comment itself when notifying a user about a new comment.
  [timo]


2.0 (2011-04-21)
----------------

- No changes.


2.0b2 (2011-04-21)
------------------
