@@ -6,7 +6,8 @@ Changelog
 ------------------
 
 - Simplify CSS and JS registrations. CSS will now be imported using the
-  standard link and so can be merged, inserted after forms.css.
+  standard link and so can be merged, inserted after forms.css. JS will now be
+  imported after collapsibleformfields.js.
   [elro]
 
 - Enable the left-menu on the configlet, to be more consistent with all other configlets.
